--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,8 +1,242 @@
+@keyframes menu-anim {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 10;
+  animation: loader 1s forwards;
+}
+
+@keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+.loader .chargement {
+  width: 210px;
+  height: 0px;
+  padding-top: 180px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.loader .lettre {
+  font-size: 30px;
+  color: #ff79da;
+  font-family: shrikhand;
+  -webkit-animation: flash 1.2s linear infinite;
+  -o-animation: flash 1.2s linear infinite;
+  animation: flash 1.2s linear infinite;
+}
+
+@keyframes flash {
+  0% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  89% {
+    color: #ff79da;
+    text-shadow: none;
+  }
+  99% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chargement {
+  width: 100%;
+}
+
+.loader .lettre:nth-child(1) {
+  animation-delay: 100ms;
+}
+
+.loader .lettre:nth-child(2) {
+  animation-delay: 200ms;
+}
+
+.loader .lettre:nth-child(3) {
+  animation-delay: 300ms;
+}
+
+.loader .lettre:nth-child(4) {
+  animation-delay: 400ms;
+}
+
+.loader .lettre:nth-child(5) {
+  animation-delay: 500ms;
+}
+
+.loader .lettre:nth-child(6) {
+  animation-delay: 600ms;
+}
+
+.loader .lettre:nth-child(7) {
+  animation-delay: 700ms;
+}
+
+.loader .lettre:nth-child(8) {
+  animation-delay: 800ms;
+}
+
+.loader .lettre:nth-child(9) {
+  animation-delay: 900ms;
+}
+
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+}
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #9356dc;
+}
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes menu {
+  0% {
+    transform: scaleX(0);
+    opacity: 0.5;
+  }
+  80% {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+}
+@keyframes price {
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translateX(-200%);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* Home Page */
 .Home {
   width: 100%;
   height: fit-content;
   margin: 0;
   font-family: "roboto", sans-serif;
+  border: black solid;
 }
 
 a {
@@ -33,18 +267,19 @@ input {
   width: 9rem;
   height: 2rem;
   border: none;
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   font-weight: 600;
   font-size: 1rem;
 }
 
+/* Home page  Specific*/
 .section_1 {
   width: 100%;
 }
 .section_1_1 {
   width: 100%;
   height: 3rem;
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   justify-items: center;
   display: flex;
   justify-content: center;
@@ -67,7 +302,7 @@ input {
   align-items: center;
   width: 100%;
   height: 15rem;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .section_1_2_title {
   width: 100%;
@@ -95,6 +330,7 @@ input {
   filter: opacity(80%);
   filter: brightness(110%);
   box-shadow: 0px 2px 17px 5px rgba(79, 79, 79, 0.32);
+  cursor: pointer;
 }
 .section_1_2_button_b {
   border-radius: 30px;
@@ -105,7 +341,7 @@ input {
   border: none;
   box-shadow: 0px 4px 17px 2px rgba(79, 79, 79, 0.26);
   color: white;
-  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  background: linear-gradient(to bottom right, #ff79da, #9356dc);
 }
 
 .section_2 {
@@ -113,7 +349,7 @@ input {
   height: 18rem;
 }
 .section_2_1 {
-  width: 100%;
+  width: 80%;
   height: 18%;
   margin-left: 3%;
   font-weight: bolder;
@@ -132,15 +368,16 @@ input {
   width: 90%;
   height: 28%;
   margin-left: 5%;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   border-radius: 20px;
   box-shadow: #cccaca 5px 5px 5px;
 }
 .section_2_2_card:hover {
-  background-color: #F5EDFF;
+  background-color: #f5edff;
+  cursor: pointer;
 }
-.section_2_2_card:hover > i {
-  color: #9356DC;
+.section_2_2_card:hover .fas {
+  color: #9356dc;
 }
 .section_2_2_card_s {
   width: 82%;
@@ -151,10 +388,11 @@ input {
   right: 0.8rem;
 }
 .section_2_2_card_s_num {
-  background-color: #9356DC;
-  border-radius: 50px;
+  background-color: #9356dc;
+  border-radius: 50%;
   padding: 1.2% 2.8% 1.2% 2.8%;
   color: white;
+  font-size: small;
 }
 .section_2_2_card_s_icon i, .section_2_2_card_s_icon1 i, .section_2_2_card_s_icon2 i {
   color: grey;
@@ -187,7 +425,7 @@ input {
   height: 7%;
   display: flex;
   align-items: center;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .section_3_1_title {
   height: 50%;
@@ -197,7 +435,7 @@ input {
   width: 100%;
   height: 93%;
   margin: 0;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .section_3_2_cards {
   width: 100%;
@@ -245,6 +483,9 @@ input {
   bottom: 9%;
   left: 5%;
 }
+.section_3_2_cards_1_legend_text_title h3 {
+  font-size: 120%;
+}
 .section_3_2_cards_1_legend_text_subtitle {
   width: 100%;
   height: 40%;
@@ -254,24 +495,37 @@ input {
   bottom: 6%;
   left: 5%;
 }
+.section_3_2_cards_1_legend_text_subtitle p {
+  font-size: 100%;
+}
 .section_3_2_cards_1_legend_heart {
   width: 25%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
-.section_3_2_cards_1_legend_heart .far {
-  height: 30%;
-  width: 30%;
-  font-size: 160%;
-  color: #424141;
+.section_3_2_cards_1_legend_heart:hover .far {
+  color: #9356dc;
+}
+
+.new, .new1 {
+  height: 14%;
+  width: 22%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #99E2D0;
+  border-radius: 5px;
   position: relative;
-  bottom: 0.4rem;
-  fill: #9356DC;
+  left: 72%;
+  bottom: 90%;
 }
-.section_3_2_cards_1_legend_heart .far:focus .fa-heart {
-  font-size: bolder;
+.new p, .new1 p {
+  color: #008766;
+  font-size: 100%;
+  font-weight: 600;
 }
 
 footer a {
@@ -283,15 +537,14 @@ footer a {
   height: 18rem;
   background-color: #353535;
   color: white;
-  border: yellow solid;
 }
 .foot_logo {
-  width: 100%;
+  width: 60%;
   height: 25%;
 }
 .foot_logo_ohmyfood {
   background-color: transparent;
-  width: 35%;
+  width: 10rem;
   margin-left: 1rem;
   padding: 5% 0 0 5%;
 }
@@ -306,6 +559,9 @@ footer a {
   margin-right: 50%;
   font-size: 1rem;
 }
+.foot_list_icon .fas, .foot_list .far {
+  color: white;
+}
 .foot_list ul li {
   list-style: none;
   display: flex;
@@ -313,13 +569,13 @@ footer a {
   height: 2.2rem;
 }
 
+/* Restaurant page */
 .R1 {
   width: 100%;
   height: fit-content;
   margin: 0;
   font-family: "roboto", sans-serif;
-  background-color: #F6F6F6;
-  border: steelblue solid;
+  background-color: #f6f6f6;
 }
 .R1-header {
   width: 100%;
@@ -339,7 +595,7 @@ footer a {
   color: #353535;
 }
 .R1-header-b1 i:hover {
-  color: #9356DC;
+  color: #9356dc;
 }
 .R1-header-b2 {
   width: 70%;
@@ -367,7 +623,7 @@ footer a {
 .R1-menu-carte {
   width: 100%;
   z-index: 1;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   height: fit-content;
   position: relative;
   bottom: 4rem;
@@ -380,7 +636,7 @@ footer a {
   justify-content: space-between;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .R1-menu-carte-title-text {
   width: 70%;
@@ -405,7 +661,7 @@ footer a {
   width: 100%;
   height: fit-content;
   margin-bottom: 10%;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .R1-menu-carte-choix-entrees {
   margin-bottom: 4%;
@@ -419,11 +675,24 @@ footer a {
   font-weight: 400;
   padding-bottom: 1%;
   width: 11%;
-  border-bottom: solid #99E2D0;
+  border-bottom: solid #99e2d0;
 }
 .R1-menu-carte-choix-entrees-nom {
   width: 100%;
   height: fit-content;
+}
+.R1-menu-carte-choix-entrees-nom :hover {
+  cursor: pointer;
+}
+.R1-menu-carte-choix-entrees-nom :hover > :nth-child(3) {
+  background-color: #99E2D0;
+  animation: menu 500ms;
+}
+.R1-menu-carte-choix-entrees-nom :hover > #pricebox {
+  animation: price 500ms forwards;
+}
+.R1-menu-carte-choix-entrees-nom :hover .checkrotate {
+  animation: rotate 400ms;
 }
 .R1-menu-carte-choix-entrees-nom-x {
   width: 95%;
@@ -433,10 +702,25 @@ footer a {
   background-color: white;
   border-radius: 20px;
   margin: 0 0 5% 2%;
+  position: relative;
   box-shadow: #e7e4e4 10px 10px 10px;
 }
+.R1-menu-carte-choix-entrees-nom-x-anim {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 15%;
+  transform-origin: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.R1-menu-carte-choix-entrees-nom-x-anim i {
+  color: white;
+  opacity: 0.8;
+  font-size: 180%;
+}
 .R1-menu-carte-choix-entrees-nom-x-text {
-  width: 80%;
+  width: 70%;
   margin-left: 4%;
   height: 100%;
 }
@@ -461,10 +745,13 @@ footer a {
   bottom: 90%;
 }
 .R1-menu-carte-choix-entrees-nom-x-price {
-  width: 20%;
+  width: 5%;
   display: flex;
+  justify-items: right;
   align-items: flex-end;
   color: #353434;
+  position: relative;
+  left: 5%;
 }
 .R1-menu-carte-choix-entrees-nom-x-price h3 {
   position: relative;
@@ -482,6 +769,7 @@ footer a {
   filter: opacity(80%);
   filter: brightness(110%);
   box-shadow: 0px 2px 17px 5px rgba(79, 79, 79, 0.32);
+  cursor: pointer;
 }
 .R1-menu-carte-button-b {
   border-radius: 30px;
@@ -492,7 +780,351 @@ footer a {
   border: none;
   box-shadow: 0px 4px 17px 2px rgba(79, 79, 79, 0.26);
   color: white;
-  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  background: linear-gradient(to bottom right, #ff79da, #9356dc);
+}
+
+#p1 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+}
+
+#p2 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 100ms;
+}
+
+#p3 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 200ms;
+}
+
+#p4 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 300ms;
+}
+
+#p5 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 400ms;
+}
+
+#p6 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 500ms;
+}
+
+#p7 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 600ms;
+}
+
+#p8 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 700ms;
+}
+
+#p9 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 800ms;
+}
+
+#p10 {
+  animation-name: menu-anim;
+  animation-duration: 1000ms;
+  animation-delay: 900ms;
+}
+
+/* Media Queries - tablet */
+@media (min-width: 500px) and (max-width: 800px) {
+  /* Home Page */
+  .Home {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .section_1 {
+    width: 85%;
+    box-shadow: #dddcdc 5px 5px 5px;
+    border-radius: 30px;
+  }
+  .section_1_1 {
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+  }
+  .section_1_2 {
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+  }
+  .section_1_2_button_b {
+    width: 70%;
+  }
+
+  .section_2_2_card {
+    width: 70%;
+  }
+  .section_2_2_card_s_num {
+    font-size: large;
+    padding: 1% 2% 1% 2%;
+  }
+
+  .section_3 {
+    height: fit-content;
+    width: 95%;
+    background-color: #f6f6f6;
+  }
+  .section_3_2 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .section_3_2_cards {
+    width: 48%;
+    height: 20rem;
+    margin-left: 1.5%;
+  }
+  .section_3_2_cards_1_pict {
+    height: 13rem;
+  }
+  .section_3_2_cards_1_legend_text_title h3 {
+    font-size: 115%;
+  }
+  .section_3_2_cards_1_legend_text_subtitle p {
+    font-size: 110%;
+  }
+
+  .foot {
+    height: 12rem;
+  }
+  .foot_logo {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-content: flex-start;
+  }
+  .foot_logo_ohmyfood {
+    height: 50%;
+  }
+  .foot_list {
+    justify-content: flex-start;
+  }
+  .foot_list ul {
+    height: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-left: 1.5%;
+  }
+  .foot_list ul li p {
+    width: 400%;
+  }
+  .foot_list ul li i {
+    font-size: 130%;
+    position: relative;
+    right: 0.3rem;
+  }
+  .foot .foot_list_text {
+    width: 25%;
+  }
+
+  .R1-header-b2 {
+    width: 60%;
+  }
+  .R1-menu-carte-button-b {
+    width: 40%;
+  }
+}
+/* Media Queries - Desktop */
+@media (min-width: 801px) and (max-width: 3000px) {
+  .Home {
+    border: blue solid;
+  }
+
+  .header {
+    height: 8rem;
+    width: 100%;
+  }
+  .header_logo {
+    height: 100%;
+  }
+  .header_logo_pict {
+    width: 100%;
+    height: 4rem;
+  }
+
+  .section_1_1_map i {
+    position: relative;
+    top: 0.4rem;
+  }
+  .section_1_1_map input {
+    font-size: 1.4rem;
+    width: 14rem;
+  }
+
+  .section_1 {
+    width: 90%;
+    margin-left: 5%;
+  }
+  .section_1_1 {
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+  }
+  .section_1_2 {
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+  }
+  .section_1_2_title h2 {
+    font-size: 200%;
+  }
+  .section_1_2_subtitle p {
+    font-size: 130%;
+  }
+  .section_1_2_button_b {
+    width: 30%;
+    margin: 0;
+    position: relative;
+    bottom: 2.5rem;
+  }
+
+  .section_2 {
+    height: 8rem;
+  }
+  .section_2_1 {
+    font-size: 120%;
+  }
+  .section_2_2 {
+    flex-direction: row;
+    margin: 0;
+    margin-top: 5%;
+  }
+  .section_2_2_card {
+    width: 30%;
+    height: 6rem;
+  }
+  .section_2_2_card_s_text p, .section_2_2_card_s_text1 p {
+    font-size: 100%;
+    margin-left: 20%;
+  }
+  .section_2_2_card_s_num {
+    font-size: 150%;
+    padding: 1% 4% 1% 4%;
+  }
+  .section_2_2_card_s_icon, .section_2_2_card_s_icon2 {
+    font-size: 150%;
+    margin-left: 5%;
+  }
+  .section_2_2_card_s_icon1 i {
+    font-size: 180%;
+    margin-left: 5%;
+  }
+
+  .section_3 {
+    background-color: #f6f6f6;
+    height: 65rem;
+  }
+  .section_3_1 {
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+  }
+  .section_3_1_title {
+    font-size: 120%;
+  }
+  .section_3_2 {
+    display: flex;
+    flex-wrap: wrap;
+    height: 60rem;
+  }
+  .section_3_2_cards {
+    width: 48%;
+    height: 25rem;
+    margin-left: 1.5%;
+  }
+  .section_3_2_cards_1_pict {
+    height: 16rem;
+  }
+  .section_3_2_cards_1_legend_text_title h3 {
+    font-size: 115%;
+  }
+  .section_3_2_cards_1_legend_text_subtitle p {
+    font-size: 110%;
+  }
+
+  .foot {
+    height: 12rem;
+  }
+  .foot_logo {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .foot_logo_ohmyfood {
+    height: 50%;
+    position: relative;
+    bottom: 50%;
+  }
+  .foot_list {
+    justify-content: flex-start;
+  }
+  .foot_list ul {
+    height: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-left: 1.5%;
+  }
+  .foot_list ul li p {
+    width: 400%;
+  }
+  .foot_list ul li i {
+    font-size: 130%;
+    position: relative;
+    right: 0.3rem;
+  }
+  .foot_text {
+    width: 25%;
+  }
+
+  /* Restaurant Page General */
+  .header_cont_arrow i {
+    font-size: 170%;
+  }
+
+  .R1 {
+    width: 100%;
+    font-size: 120%;
+  }
+  .R1-header {
+    height: 6rem;
+  }
+  .R1-header-b2 {
+    width: 65%;
+  }
+  .R1-header-b2-pict {
+    height: 4rem;
+    width: 17rem;
+  }
+  .R1-menu-carte-choix {
+    width: 80%;
+    margin-left: 10%;
+  }
+  .R1-menu-carte-choix-entrees-nom-x {
+    height: 20%;
+  }
+  .R1-menu-carte-choix-entrees-nom-x-price {
+    display: flex;
+    justify-content: center;
+  }
+  .R1-menu-carte-button-b {
+    width: 30%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
